--- a/project-manager.html
+++ b/project-manager.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/twilio/jobs/1927463'>Job Application for Program Manager, Talent Acquisition at Twilio</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/arcadia/jobs/4497342002'>Job Application for Technical Project Manager at Arcadia.io</a></h5> 
 <p><span class="badge badge-light">Pittsburgh</span></p>
 <p>Posted on: 2019-10-28</p>
@@ -76,7 +80,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://relex.recruiterbox.com/jobs/fk03ilj/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://relex.recruiterbox.com/jobs/fk03ilj/'>
     Project Manager at RELEX
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -94,11 +98,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://abbvie.referrals.selectminds.com/jobs/project-manager-process-improvement-12564'>Project Manager, Process Improvement - AbbVie Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://abbvie.referrals.selectminds.com/jobs/project-manager-process-improvement-12564'>Project Manager, Process Improvement - AbbVie Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698328993-senior-project-manager-contract-'>Broadridge Senior Project Manager (Contract) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698328993-senior-project-manager-contract-'>Broadridge Senior Project Manager (Contract) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -106,7 +110,7 @@
 <p><span class="badge badge-light">San Francisco New York Los Angeles</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/reddit/jobs/1935609'>Job Application for Onboarding & Product Enablement Program Manager at Reddit</a></h5> 
+<h5><a href='https://boards.greenhouse.io/reddit/jobs/1935609'>Job Application for Onboarding & Product Enablement Program Manager at Reddit</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -118,11 +122,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/K4Connect/743999698320872-field-project-manager'>K4Connect Field Project Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/K4Connect/743999698320872-field-project-manager'>K4Connect Field Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/K4Connect/743999698321278-field-project-manager'>K4Connect Field Project Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/K4Connect/743999698321278-field-project-manager'>K4Connect Field Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -288,11 +292,11 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light">Los Angeles, California United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/liferay/job/oQ5mbfwc'>Liferay, Inc. Careers - Project Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/liferay/job/oQ5mbfwc'>Liferay, Inc. Careers - Project Manager</a></h5> 
 <p><span class="badge badge-light">Budapest, Hungary  Los Angeles Brazil</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://dacadoo.join.com/jobs/462130-project-manager-80-100-m-f'>Job @ dacadoo (Z?rich): Project Manager 80-100% (m/f) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dacadoo.join.com/jobs/462130-project-manager-80-100-m-f'>Job @ dacadoo (Z?rich): Project Manager 80-100% (m/f) | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland  Australia</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -370,13 +374,13 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light">Palo Alto</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://brandloyalty.recruitee.com/o/programme-manager-7'>
+<h5><a href='https://brandloyalty.recruitee.com/o/programme-manager-7'>
       Programme Manager - BrandLoyalty
     </a></h5> 
 <p><span class="badge badge-light">Tokyo, Japan</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oeqJafwh&__jvst=Employee+Referral&__jvsd=skRG1iwF&__jvsc=Twitter&bid=nmnGlMw1'>NICE Careers - Project Manager - Support Operations</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oeqJafwh&__jvst=Employee+Referral&__jvsd=skRG1iwF&__jvsc=Twitter&bid=nmnGlMw1'>NICE Careers - Project Manager - Support Operations</a></h5> 
 <p><span class="badge badge-light">Raanana, Israel</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -421,7 +425,7 @@ years of experience in structural evaluation, forming and falsework analysis,?..
 <p><span class="badge badge-light">Stockholm, Sweden</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698241393-junior-project-manager-m-f-x-'>Netcentric Junior Project Manager (m/f/x) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698241393-junior-project-manager-m-f-x-'>Netcentric Junior Project Manager (m/f/x) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -449,10 +453,6 @@ years of experience in structural evaluation, forming and falsework analysis,?..
     Project Manager at RELEX
 </a></h5> 
 <p><span class="badge badge-light">Oslo, Norway</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/intelextechnologies/jobs/1931711'>Job Application for Project Manager  at Intelex Technologies</a></h5> 
-<p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
 
